[package]
name = "clacos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"
spin = "0.5.2"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33

# The way we are testing that a panic correctly occurs implies that all
# integration tests expecting a panic only support one test case. To avoid
# creating multiple cases by mistake and to simplify the code, we disable the
# test harness altogether and write the test code in each test's `_start`
# function directly.

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
